@@ -2,6 +2,7 @@ Revision history for ExtUtils-HasCompiler
 
 {{$NEXT}}
           Fix MSVC regression
+          Only use env-vars when no config is passed
 
 0.003     2015-05-30 19:33:33+02:00 Europe/Amsterdam
           Prefer environmental variables over configuration (experimental)
